--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Example React App</title>
 </head>
 <body>
